Header and Footer added

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -6,16 +6,64 @@ html {
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-sarif;
   font-size: 14px;
-  line-height: 1px;
   margin: 0;
   margin-bottom: 60px;
 }
 
-/* ----------- Footer ----------*/
+/* ----------- NavBar --------- */
+.navbar-default {
+  background-color: #fff;
+}
+
+.navbar-header {
+  height: 110px;
+}
+
+.navbar-brand > img {
+  height: 90px;
+}
+
+.link-margin {
+  margin-top: 35px;
+}
+
+.nav-links > a {
+  color: #999 !important;
+  font-size: 14px;
+  font-weight: 500;
+  font-style: normal;
+  letter-spacing: .12em;
+  text-transform: uppercase;
+}
+
+/* ----------- Footer ---------- */
 .footer {
   position: absolute;
   bottom: 0;
   width: 100%;
   height: 60px;
-  background-color: #f5f5f5;  
+  background-color: #fff;  
+}
+
+.navbar-btn {
+  border: 2px solid #38b4e8;
+  font-size: 12px;
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: .12em;
+  color: #38b4e8;
+  padding: 10px 20px;
+  margin-right: 20px;
+}
+
+.footer-address {
+  text-align: right;
+  padding-right: 20px;
+  margin-bottom: 0;
+}
+
+.copyright {
+  font-size: 12px;
+  text-align: right;
+  padding-right: 20px;
 }
